# rocknblock-test

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
deploy/: Dockerfile
deploy/api/: entrypoint.sh
src/: manage.py
src/core/: settings.py  urls.py
src/core/services/blockchain/: __init__.py  client.py  contract_manager.py
src/tokens/: models.py  pagination.py  serializers.py  urls.py  views.py
src/tokens/migrations/: 0001_initial.py
